always show scrollbar to prevent layout shifting

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,5 +1,9 @@
 @import "./base.css";
 
+body {
+  overflow-y: scroll; /* Show scrollbars */
+}
+
 /*
 ===============
 Tooltips:
